ili2fme 7.0.1 (2019-08-23) BETA
-------------------------------
- filter baskets (topic filter) in IoxReader
- implement linetable reading
- integrated ilivalidator
- ili2c-5.0.1
- iox-ili-1.20.12

ili2fme 7.0.0 (2019-07-05) BETA
-------------------------------
- refactored polygon building
- new Reader option to select linetable mapping: ILI1_LINETABLES (Polygon, Raw, Polygon+Raw) 

ili2fme 6.3.0 (2019-04-24)
--------------------------
- ili2c-5.0.0
- iox-ili-1.20.11

ili2fme 6.2.3 (2018-12-09)
--------------------------
- ili2c-4.7.11
- iox-ili 1.20.10

ili2fme 6.2.2 (2018-05-17)
--------------------------
- ili2c-4.7.7
- iox-ili 1.20.2
- hide Base-Name of RenamedViewableRef
- support implicit attribute type in ViewDef

ili2fme 6.2.1 (2017-10-20)
--------------------------
- ili2c-4.7.4
- iox-ili 1.19.8


ili2fme 6.2.0 (2017-08-15)
--------------------------
- link with pluginbuilder.jar of FME 2017.1
- replaced setBinaryAttribute() with setByteArrayAttribute() to avoid platform default charset dependency
- replaced getBinaryAttribute() with getByteArrayAttribute() to avoid platform default charset dependency
- replaced deprecated geometryTools() with getGeometryTools()
- ili2c-4.7.3
- iox-ili-1.13.6

ili2fme 6.1.5 (2016-11-02)
--------------------------
- ItfReader: fixed FME message "Warning: not all Stashed Objects that were registered were dropped before shutdown"
- XtfWriter: fixed BLACKBOX output
- XtfReader: fixed BLACKBOX parser
- ili2c-4.5.27
- iox-ili-1.13.5

ili2fme 6.1.4 (2016-09-19)
--------------------------
- ili2c-4.5.26
- iox-ili-1.13.4
- list intersections only once
- ItfReader2: fixed NullPointerException if OPTIONAL AREA with not geometries at all
- ItfReader2: fixed polygon building in SURFACE with common point between hole and shell that is not start/end point of a boundary line
- ItfReader2: fixed polygon building in AREA with common point between boundaries that is not start/end point of a boundary line